--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     ~ Copyright 2022 The TensorFlow Authors. All Rights Reserved.
     ~
     ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,70 +13,102 @@
     ~ See the License for the specific language governing permissions and
     ~ limitations under the License.
 -->
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/transparent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/transparent">
+
+    <!--    <RelativeLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:orientation="vertical">-->
+
+    <!--    <androidx.fragment.app.FragmentContainerView-->
+    <!--        android:id="@+id/fragment_container"-->
+    <!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:background="@android:color/transparent"-->
+    <!--        android:keepScreenOn="true"-->
+    <!--        app:defaultNavHost="true"-->
+    <!--        app:navGraph="@navigation/nav_graph"-->
+    <!--        tools:context=".MainActivity"/>-->
+
+    <!--    </RelativeLayout>-->
+
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        tools:context=".MainActivity">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_container"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/transparent"
-        android:keepScreenOn="true"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/nav_graph"
-        tools:context=".MainActivity"/>
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="10dp"-->
-<!--            android:orientation="horizontal">-->
+        <Button
+            android:id="@+id/car_plate_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:text="车牌" />
 
-<!--            <Button-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="48dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:gravity="center"-->
-<!--                android:onClick="front"-->
-<!--                android:text="身份证正面"-->
-<!--                android:textSize="16sp"/>-->
+        <Button
+            android:id="@+id/vin_id_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/car_plate_button"
+            android:layout_alignParentLeft="true"
+            android:text="车架" />
+        <Button
+            android:id="@+id/id_card_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/vin_id_button"
+            android:text="身份证"
+            android:layout_alignParentLeft="true"/>
 
-<!--            <Button-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="48dp"-->
-<!--                android:layout_marginLeft="10dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:gravity="center"-->
-<!--                android:onClick="back"-->
-<!--                android:text="身份证反面"-->
-<!--                android:textSize="16sp"/>-->
-<!--        </LinearLayout>-->
+        <Button
+            android:id="@+id/vehicle_id_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="行驶证"
+            android:layout_below="@id/id_card_button"
+            android:layout_alignParentLeft="true" />
 
+        <Button
+            android:id="@+id/driver_id_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="驾驶证"
+            android:layout_below="@id/vehicle_id_button"
+            android:layout_alignParentLeft="true" />
 
-        <!--        <androidx.appcompat.widget.Toolbar-->
-<!--            android:id="@+id/toolbar"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="?attr/actionBarSize"-->
-<!--            android:layout_alignParentTop="true"-->
-<!--            android:background="@color/toolbar_background">-->
+        <Button
+            android:id="@+id/car_front_45_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="前45°"
+            android:layout_below="@id/driver_id_button"
+            android:layout_alignParentLeft="true" />
 
-<!--            <ImageView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:src="@drawable/tfl_logo"-->
-<!--                />-->
-<!--        </androidx.appcompat.widget.Toolbar>-->
+        <Button
+            android:id="@+id/car_back_45_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="后45°"
+            android:layout_below="@id/car_front_45_button"
+            android:layout_alignParentLeft="true" />
 
+        <Button
+            android:id="@+id/car_damage_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="损伤部位"
+            android:layout_below="@id/car_back_45_button"
+            android:layout_alignParentLeft="true" />
     </RelativeLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
