--- a/app/src/main/res/layout-land/fragment_camera.xml
+++ b/app/src/main/res/layout-land/fragment_camera.xml
@@ -7,21 +7,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <androidx.camera.view.PreviewView
         android:id="@+id/view_finder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:scaleType="fillStart">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageButton
-            android:id="@+id/camera_capture_button"
-            android:layout_width="@dimen/round_button_large"
-            android:layout_height="@dimen/round_button_large"
-            android:layout_marginEnd="100dp"
-            android:background="@drawable/ic_shutter"
-            android:contentDescription="@string/capture_button_alt" />
+            <!-- Camera control and gallery buttons -->
+            <ImageButton
+                android:id="@+id/camera_capture_button"
+                android:layout_width="@dimen/round_button_large"
+                android:layout_height="@dimen/round_button_large"
+                android:layout_marginEnd="@dimen/shutter_button_margin"
+                android:scaleType="fitCenter"
+                android:background="@drawable/ic_shutter"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.5"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:contentDescription="@string/capture_button_alt" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.camera.view.PreviewView>
+
 
     <TextView
         android:id="@+id/inference_time_val"
@@ -108,13 +118,6 @@
         android:rotation="0"
         android:src="@drawable/bg" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_anchor="@+id/view_finder"
-        app:layout_anchorGravity="center">
-        <!-- Camera control and gallery buttons -->
 
 
-    </RelativeLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
