--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -168,19 +168,18 @@
         android:layout_height="match_parent">
         <!-- Camera control and gallery buttons -->
 
-
-<!--        <ImageButton-->
-<!--            android:id="@+id/camera_capture_button"-->
-<!--            android:layout_width="@dimen/round_button_large"-->
-<!--            android:layout_height="@dimen/round_button_large"-->
-<!--            android:layout_marginEnd="380dp"-->
-<!--            android:background="@drawable/ic_shutter"-->
-<!--            android:contentDescription="@string/capture_button_alt"-->
-<!--            android:scaleType="fitXY"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:layout_constraintVertical_bias="0.962" />-->
+        <ImageButton
+            android:id="@+id/camera_capture_button"
+            android:layout_width="@dimen/round_button_large"
+            android:layout_height="@dimen/round_button_large"
+            android:layout_marginBottom="@dimen/shutter_button_margin"
+            android:scaleType="fitCenter"
+            android:background="@drawable/ic_shutter"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.5"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:contentDescription="@string/capture_button_alt" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
