处理相机闪退问题

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,52 +63,53 @@
             android:layout_below="@id/car_plate_button"
             android:layout_alignParentLeft="true"
             android:text="车架" />
+
         <Button
             android:id="@+id/id_card_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/vin_id_button"
-            android:text="身份证"
-            android:layout_alignParentLeft="true"/>
+            android:layout_alignParentLeft="true"
+            android:text="身份证" />
 
         <Button
             android:id="@+id/vehicle_id_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="行驶证"
             android:layout_below="@id/id_card_button"
-            android:layout_alignParentLeft="true" />
+            android:layout_alignParentLeft="true"
+            android:text="行驶证" />
 
         <Button
             android:id="@+id/driver_id_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="驾驶证"
             android:layout_below="@id/vehicle_id_button"
-            android:layout_alignParentLeft="true" />
+            android:layout_alignParentLeft="true"
+            android:text="驾驶证" />
 
         <Button
             android:id="@+id/car_front_45_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="前45°"
             android:layout_below="@id/driver_id_button"
-            android:layout_alignParentLeft="true" />
+            android:layout_alignParentLeft="true"
+            android:text="前45°" />
 
         <Button
             android:id="@+id/car_back_45_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="后45°"
             android:layout_below="@id/car_front_45_button"
-            android:layout_alignParentLeft="true" />
+            android:layout_alignParentLeft="true"
+            android:text="后45°" />
 
         <Button
             android:id="@+id/car_damage_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="损伤部位"
             android:layout_below="@id/car_back_45_button"
-            android:layout_alignParentLeft="true" />
+            android:layout_alignParentLeft="true"
+            android:text="损伤部位" />
     </RelativeLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
