支持提示用户 车牌的位置

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
 <resources>
     <!-- TF Branding Orange -->
     <color name="bounding_box_color">#FF6F00</color>
+    <color name="bounding_box_tip_color">#D55EEE</color>
     <color name="toolbar_background">#EEEEEE</color>
     <color name="ic_launcher_background">#FFFFFF</color>
     <color name="bottom_sheet_background">#EEEEEE</color>
