--- a/app/src/main/res/layout/fragment_car_front45.xml
+++ b/app/src/main/res/layout/fragment_car_front45.xml
@@ -158,7 +158,8 @@
             android:layout_width="640dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="-90dp"
-            android:src="@drawable/bg" />
+            android:src="@drawable/bg"
+            />
     </RelativeLayout>
 
 
