--- a/app/src/main/res/layout-land/fragment_car_front45.xml
+++ b/app/src/main/res/layout-land/fragment_car_front45.xml
@@ -34,7 +34,7 @@
 
 
 
-    <org.tensorflow.lite.examples.objectdetection.OverlayView
+    <org.tensorflow.lite.examples.objectdetection.OverlayCarFront45View
         android:id="@+id/overlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
