完成前车45度识别

--- a/app/src/main/res/layout/fragment_car_front45.xml
+++ b/app/src/main/res/layout/fragment_car_front45.xml
@@ -159,6 +159,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="-90dp"
             android:src="@drawable/bg"
+            android:visibility="invisible"
             />
     </RelativeLayout>
 
