--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -53,6 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_marginTop="0dp"
             android:text="车牌" />
 
         <Button
@@ -61,12 +62,16 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/car_plate_button"
             android:layout_alignParentLeft="true"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
             android:text="车架" />
         <Button
             android:id="@+id/id_card_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/vin_id_button"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
             android:text="身份证"
             android:layout_alignParentLeft="true"/>
 
@@ -76,6 +81,7 @@
             android:layout_height="wrap_content"
             android:text="行驶证"
             android:layout_below="@id/id_card_button"
+            android:layout_marginTop="0dp"
             android:layout_alignParentLeft="true" />
 
         <Button
