feat(BANK-0000):update

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,18 +25,16 @@
     <!--        android:layout_height="match_parent"-->
     <!--        android:orientation="vertical">-->
 
-    <!--    <androidx.fragment.app.FragmentContainerView-->
-    <!--        android:id="@+id/fragment_container"-->
-    <!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent"-->
-    <!--        android:background="@android:color/transparent"-->
-    <!--        android:keepScreenOn="true"-->
-    <!--        app:defaultNavHost="true"-->
-    <!--        app:navGraph="@navigation/nav_graph"-->
-    <!--        tools:context=".MainActivity"/>-->
-
-    <!--    </RelativeLayout>-->
+    <!--        <androidx.fragment.app.FragmentContainerView-->
+    <!--            android:id="@+id/fragment_container"-->
+    <!--            android:name="androidx.navigation.fragment.NavHostFragment"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:background="@android:color/transparent"-->
+    <!--            android:keepScreenOn="true"-->
+    <!--            app:defaultNavHost="true"-->
+    <!--            app:navGraph="@navigation/nav_graph"-->
+    <!--            tools:context=".MainActivity"/>-->
 
 
     <RelativeLayout
@@ -47,14 +45,16 @@
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_marginTop="-50dp" />
 
         <Button
             android:id="@+id/car_plate_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:text="车牌" />
+            android:text="车牌"
+            android:textSize="13sp" />
 
         <Button
             android:id="@+id/vin_id_button"
@@ -62,7 +62,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/car_plate_button"
             android:layout_alignParentLeft="true"
-            android:text="车架" />
+            android:layout_marginTop="-5dp"
+            android:text="车架"
+            android:textSize="13sp" />
 
         <Button
             android:id="@+id/id_card_button"
@@ -70,7 +72,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/vin_id_button"
             android:layout_alignParentLeft="true"
-            android:text="身份证" />
+            android:layout_marginTop="-5dp"
+            android:text="身份证"
+            android:textSize="13sp" />
 
         <Button
             android:id="@+id/vehicle_id_button"
@@ -78,7 +82,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/id_card_button"
             android:layout_alignParentLeft="true"
-            android:text="行驶证" />
+            android:layout_marginTop="-5dp"
+            android:text="模型测试"
+            android:textSize="13sp" />
 
         <Button
             android:id="@+id/driver_id_button"
@@ -86,7 +92,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/vehicle_id_button"
             android:layout_alignParentLeft="true"
-            android:text="驾驶证" />
+            android:layout_marginTop="-5dp"
+            android:text="驾驶证"
+            android:textSize="13sp" />
 
         <Button
             android:id="@+id/car_front_45_button"
@@ -94,7 +102,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/driver_id_button"
             android:layout_alignParentLeft="true"
-            android:text="前45°" />
+            android:layout_marginTop="-5dp"
+            android:text="前45°"
+            android:textSize="13sp" />
 
         <Button
             android:id="@+id/car_back_45_button"
@@ -102,7 +112,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/car_front_45_button"
             android:layout_alignParentLeft="true"
-            android:text="后45°" />
+            android:layout_marginTop="-5dp"
+            android:text="后45°"
+            android:textSize="13sp" />
 
         <Button
             android:id="@+id/car_damage_button"
@@ -110,6 +122,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/car_back_45_button"
             android:layout_alignParentLeft="true"
-            android:text="损伤部位" />
+            android:layout_marginTop="-5dp"
+            android:text="损伤部位"
+            android:textSize="13sp" />
     </RelativeLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
