--- a/app/src/main/res/layout-land/fragment_camera.xml
+++ b/app/src/main/res/layout-land/fragment_camera.xml
@@ -12,24 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:scaleType="fillStart">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <!-- Camera control and gallery buttons -->
-            <ImageButton
-                android:id="@+id/camera_capture_button"
-                android:layout_width="@dimen/round_button_large"
-                android:layout_height="@dimen/round_button_large"
-                android:layout_marginEnd="@dimen/shutter_button_margin"
-                android:scaleType="fitCenter"
-                android:background="@drawable/ic_shutter"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintVertical_bias="0.5"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:contentDescription="@string/capture_button_alt" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.camera.view.PreviewView>
 
 
@@ -51,6 +34,7 @@
         android:layout_marginTop="330dp"
         android:text="识别提示"
         android:textColor="@color/detect_tip"
+        android:visibility="invisible"
         android:textSize="@dimen/detect_tip_text_size" />
     <TextView
         android:id="@+id/detect_data"
@@ -62,6 +46,7 @@
         android:text="识别结果："
         android:textColor="@color/detect_data"
         android:textSize="@dimen/detect_tip_text_size"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
@@ -109,13 +94,25 @@
         tools:layout_editor_absoluteX="29dp"
         tools:layout_editor_absoluteY="94dp" />
 
-<!--    <ImageView-->
-<!--        android:id="@+id/car_bg"-->
-<!--        android:layout_width="700dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:rotation="0"-->
-<!--        android:src="@drawable/bg" />-->
 
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <!-- Camera control and gallery buttons -->
 
+        <ImageButton
+            android:id="@+id/camera_capture_button"
+            android:layout_width="@dimen/round_button_large"
+            android:layout_height="@dimen/round_button_large"
+            android:layout_marginBottom="@dimen/shutter_button_margin"
+            android:scaleType="fitCenter"
+            android:background="@drawable/ic_shutter"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.5"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:contentDescription="@string/capture_button_alt" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
