--- a/app/src/main/res/layout-land/fragment_camera.xml
+++ b/app/src/main/res/layout-land/fragment_camera.xml
@@ -99,13 +99,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <!-- Camera control and gallery buttons -->
 
+        <!-- Camera control and gallery buttons -->
         <ImageButton
             android:id="@+id/camera_capture_button"
             android:layout_width="@dimen/round_button_large"
             android:layout_height="@dimen/round_button_large"
-            android:layout_marginBottom="@dimen/shutter_button_margin"
+            android:layout_marginEnd="@dimen/shutter_button_margin"
             android:scaleType="fitCenter"
             android:background="@drawable/ic_shutter"
             app:layout_constraintTop_toTopOf="parent"
@@ -113,6 +113,5 @@
             app:layout_constraintVertical_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
             android:contentDescription="@string/capture_button_alt" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
