--- a/app/src/main/res/layout-land/fragment_car_back45.xml
+++ b/app/src/main/res/layout-land/fragment_car_back45.xml
@@ -158,6 +158,7 @@
             android:layout_width="640dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="120dp"
+            android:layout_marginTop="50dp"
             android:src="@drawable/back45" />
 
 
@@ -168,13 +169,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <!-- Camera control and gallery buttons -->
 
+        <!-- Camera control and gallery buttons -->
         <ImageButton
             android:id="@+id/camera_capture_button"
             android:layout_width="@dimen/round_button_large"
             android:layout_height="@dimen/round_button_large"
-            android:layout_marginBottom="@dimen/shutter_button_margin"
+            android:layout_marginEnd="@dimen/shutter_button_margin"
             android:scaleType="fitCenter"
             android:background="@drawable/ic_shutter"
             app:layout_constraintTop_toTopOf="parent"
@@ -182,7 +183,6 @@
             app:layout_constraintVertical_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
             android:contentDescription="@string/capture_button_alt" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
