--- a/app/src/main/res/layout/front_door_camera.xml
+++ b/app/src/main/res/layout/front_door_camera.xml
@@ -154,25 +154,44 @@
 <!--        android:layout_height="match_parent"-->
 <!--        android:layout_marginLeft="-90dp"-->
 <!--        android:src="@drawable/bg" />-->
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <!-- Camera control and gallery buttons -->
+        android:layout_height="match_parent"
+        android:gravity="right|center_vertical"
+        android:orientation="vertical"
+        android:visibility="visible">
+        <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+        <!--        android:layout_width="match_parent"-->
+        <!--        android:layout_height="match_parent"-->
+        <!--        android:visibility="visible">-->
+        <Button
+            android:id="@+id/confirm_upload_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="上传"
+            android:visibility="gone" />
 
         <ImageButton
             android:id="@+id/camera_capture_button"
             android:layout_width="@dimen/round_button_large"
             android:layout_height="@dimen/round_button_large"
             android:layout_marginBottom="@dimen/shutter_button_margin"
-            android:scaleType="fitCenter"
             android:background="@drawable/ic_shutter"
-            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/capture_button_alt"
+            android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
-            android:contentDescription="@string/capture_button_alt" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5"
+            />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/confirm_retry_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="重拍"
+            android:visibility="gone" />
+        <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+    </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
